--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@ TISSERAND Dakar Interiors – Dakar, Senegal <br>
        
         <section id="contact">
             <form action="submit">
+                <h2>Contact Me</h2>
                 <input type="text" name="name" placeholder="Your Name" required>
                 <input type="email" name="email" placeholder="Your Email" required> 
                 <button type="submit">Submit</button>
