--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <nav>
+        <nav class="navbar">
             
                 <a href="#home">Home</a>
-                <a href="#About me">About Me</a>
+                <a href="#about-me">About Me</a>
                 <a href="#Work">Work</a>
                 <a href="#Resume">Resume</a>
                 <a href="#contact">Contact</a>
@@ -20,14 +21,14 @@
     <main>
         <div>
             <h1>Tatang Quincy</h1>
-            <p>Quincy is a ne student at GOMYCODE. He lives in Dakar-Senegal</p>
-        <section id="About me">
-            <h1>About Me</h1>
+            <p>Quincy is a new student at GOMYCODE. He lives in Dakar-Senegal</p>
+        <section id="about-me" >
+            <h2>About Me</h2>
            <video width="640" height="360" controls>
   <source src="10349008-uhd_2160_4096_25fps.mp4" type="video/mp4">
   Your browser does not support the video tag.
 </video>
-            <p>Quincy is a reliable and results-oriented administrative professional with a strong academic foundation and hands-on 
+            <p class="about">Quincy is a reliable and results-oriented administrative professional with a strong academic foundation and hands-on 
 experience in implementing administrative and personnel policies that support operational efficiency and organizational 
 growth. He brings a structured, goal-driven approach to managing resources, streamlining processes, and supporting 
 cross-functional teams. With a clear understanding of international business environments, Quincy is well-positioned to 
@@ -44,19 +45,18 @@ administrative excellence. </p>
 
         <section id="Resume">
             <h2>Resume</h2>
-            <p>Administrative Manager 
-MOKPA - Dakar, Senegal                                                                                                                                          
-July 2024 – Present<br>
-• Lead day-to-day administrative operations including utilities (water, electricity, telecoms), housing management, 
-office logistics, and general services.<br>
-• Manage expatriate staff housing, internal travel arrangements, canteen operations, and company vehicle fleet.<br>
-• Represent the company with vendors and service providers for subscriptions, insurance, maintenance, and 
-contract negotiations. </p>
-             <p>Store Manager/Team Lead 
-TISSERAND Dakar Interiors – Dakar, Senegal <br>                                                                                         
-• Supervised a team of four sales associates and led staff recruitment, onboarding, and training. <br>
-• Oversaw daily retail operations, inventory control, customer engagement, and financial reconciliation.<br> 
-• Strengthened supplier relations with local artisans, ensuring a steady pipeline of quality products. </p>
+            <div class="first">
+                Administrative Manager 
+<strong>MOKPA - Dakar, Senegal</strong>                                                                                                                                          
+July 2024 – Present
+• Lead day-to-day administrative operations including utilities (water, electricity, telecoms), housing management, office logistics, and general services.
+• Manage expatriate staff housing, internal travel arrangements, canteen operations, and company vehicle fleet.
+• Represent the company with vendors and service providers for subscriptions, insurance, maintenance, and contract negotiations.</div><br>
+             <div class="second">Store Manager/Team Lead 
+<Strong>TISSERAND Dakar Interiors – Dakar, Senegal</Strong>                                                                                          
+• Supervised a team of four sales associates and led staff recruitment, onboarding, and training. 
+• Oversaw daily retail operations, inventory control, customer engagement, and financial reconciliation.
+• Strengthened supplier relations with local artisans, ensuring a steady pipeline of quality products. </div> </section>
        
         <section id="contact">
             <form action="submit">
@@ -70,7 +70,7 @@ TISSERAND Dakar Interiors – Dakar, Senegal <br>
     </main>
     <footer>
         <p>&copy; 2024 Tatang Quincy. All rights reserved.</p>
-        <p>Follow me on <a href="
+        <p>Follow me on <a href="" rel=""></a></p>
     </footer>
 </body>
 </html>
